--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-sm-6">
                     <h2>about</h2>
-                    <p class="article-h2-content">Hi. I'm Derek</p>
+                    <p class="article-h2-content">Hey there. Hi there. Ho there. </p>
                 </div>
             </div>
         </div>
@@ -12,10 +12,14 @@
     <div class="container">
         <div class="entry-content">
             <div class="row">
-			    <div class="col-md-7 col-md-offset-3">
+                <div class="buffer"></div>
+                <div class="col-md-3">
+                    <img src="/src/images/about-me.png" alt="Derek Haworth Profile Image">
+                </div>
+			    <div class="col-md-7 col-md-offset-1">
                     <p><img src="" class="me center"></p>
-
-                    <p>Hey there, I’m Derek in case you haven't figured that out yet. I’m a full stack developer in the Chicago area. These days I'm building front-end UIs and custom interal integration tools.</p>
+                    <p>Hey there, I’m Derek in case you haven't figured that out yet. I’m a full stack developer in the Chicago area. These days I'm building front-end UIs and custom internal integration tools.</p>
+                    <p>In my spare time I like to experiment with React and build JavaScript games.</p>
                 </div>
             </div>
         </div>
