--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -10,7 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>{{title}} | Derek Haworth </title>
 <meta name="keywords" content="derek haworth, web development, front-end, full stack, javascript, node, express, react, mern, development">
-<meta name="description" content="A Chicago-based full stack developer specializing in solutioning complex business problems">
+<meta name="description" content="{{content}}">
 <meta name="author" content="Derek Haworth, derekhaw1@gmail.com">
 <meta name="copyright" content="Derek Haworth">
 <meta name="url" content="http://www.derekhaworth.com">
@@ -21,6 +21,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/src/css/main.min.css">
+
 <style>
 .temp-message {
     position: fixed;
@@ -29,6 +30,7 @@
     left: 0;
 }
 </style>
+
 <body>
     <!--Created by
    _______        __     __
