--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -16,10 +16,20 @@
                 <div class="col-md-3">
                     <img src="/src/images/about-me.png" alt="Derek Haworth Profile Image">
                 </div>
-			    <div class="col-md-7 col-md-offset-1">
-                    <p><img src="" class="me center"></p>
-                    <p>Hey there, I’m Derek in case you haven't figured that out yet. I’m a full stack developer in the Chicago area. These days I'm building front-end UIs and custom internal integration tools.</p>
-                    <p>In my spare time I like to experiment with React and build JavaScript games.</p>
+			    <div class="col-md-7 col-md-offset-1 about-me">
+                    <p>Hey there, I’m Derek in case you haven't figured that out yet. I’m a full stack developer in the Chicago area. These days I build front-end UIs and custom integration tools geared around customer service reps.</p>
+                    <p>In my spare time I like to experiment with React, build JavaScript games, and go for long walks on the beach.</p>
+                    <div class="fun-facts">
+                        <p>Fun Facts:</p>
+                        <ul>
+                            <li>Breaks the internet to learn how 'things' work</li>
+                            <li>Loves problem solving.</li>
+                            <li>Enjoys Git and Dad jokes</li>
+                            <li>Favorite Video Game: Bioshock Series</li>
+                            <li>Spirit Animal: Owl</li>
+                            <li>Personality Type: <span><a href="https://www.16personalities.com/intj-personality" target="_blank">INTJ-A</a></span></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
