--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -1,1 +1,7 @@
-<h1>Resume</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+             <a href="src/images/DerekHaworthResume_2018.docx.pdf" class="btn btn-secondary" download>Download Hardcopy</a>
+        </div>
+    </div>
+</div>
