--- a/views/single-project.handlebars
+++ b/views/single-project.handlebars
@@ -1,5 +1,5 @@
 <!-- projects gallery -->
-	<div class="gallery container">
+	<div class="gallery container content-area">
 		<div class="row">
 		    <ul class="gallery-ul clearfix">
 		    	<li>
