--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container content-area">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="contact">
