--- a/app/public/assets/sass/_utilities.scss
+++ b/app/public/assets/sass/_utilities.scss
@@ -64,6 +64,7 @@
 // DISPLAY & POSITIONING
 
 .block { display: block; }
+.inline-block { display: inline-block; }
 .inline { display: inline; }
 .clear { clear: both; }
 .clear-right { clear: right; }
