--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -27,7 +27,7 @@
                             <li>Enjoys Git and Dad jokes</li>
                             <li>Favorite Video Game: Bioshock Series</li>
                             <li>Spirit Animal: Owl</li>
-                            <li>Personality Type: <span><a href="https://www.16personalities.com/intj-personality" target="_blank">INTJ-A</a></span></li>
+                            <li>Personality Type: <span><a href="https://www.16personalities.com/intj-personality" target="_blank" title="16 Personalities Website">INTJ-A</a></span></li>
                         </ul>
                     </div>
                 </div>
