--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -1,7 +1,11 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-             <a href="src/images/DerekHaworthResume_2018.docx.pdf" class="btn btn-secondary" download>Download Hardcopy</a>
+            <h2 class="inline-block">Resume</h2> 
+            <a href="src/images/DerekHaworthResume_2018.docx.pdf" class="download-resume text-center right" id="resume" download>Download Hardcopy</a>
+            <div id="resume">
+                Resume will go here.
+            </div>
         </div>
     </div>
 </div>
