--- a/app/public/assets/sass/_body.scss
+++ b/app/public/assets/sass/_body.scss
@@ -91,13 +91,14 @@
 */
 
 .download-resume {
+  font-size: 12px;
   background: $secondary;
   color: $white;
-  box-shadow: 0 6px #1c6844;
+  box-shadow: 0 4px #1c6844;
   border-radius: 5px;
   border: none;
   cursor: pointer;
-  padding: 15px;
+  padding: 10px;
   display: inline-block;
   margin: 15px;
   text-transform: uppercase;
@@ -105,7 +106,7 @@
   font-weight: 700;
   outline: none;
   position: relative;
-  width: 19%;
+  width: 17%;
   &:focus {
     background: $secondary;
     text-decoration: none;
@@ -114,13 +115,13 @@
   &:hover {
     background: $secondary;
     color: $white;
-    box-shadow: 0 4px #1c6844;
+    box-shadow: 0 2px #1c6844;
     top: 1px;
     text-decoration: none;
   }
   &:active {
     box-shadow: 0 0 #1c6844;
-    top: 6px;
+    top: 5px;
   }
 }
 
