--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -8,7 +8,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>{{title}} | Derek Haworth </title>
+<title>{{title}} | Derek Haworth Professional Portfolio</title>
 <meta name="keywords" content="derek haworth, web development, front-end, full stack, javascript, node, express, react, mern, development">
 <meta name="description" content="{{content}}">
 <meta name="author" content="Derek Haworth, derekhaw1@gmail.com">
