footer icon size

--- a/app/public/assets/sass/_body.scss
+++ b/app/public/assets/sass/_body.scss
@@ -35,7 +35,7 @@
 
 @keyframes Pulse {
   from { background-color: #29A46A; -webkit-box-shadow: 0 0 9px #333; }
-  50% { background-color: #33c681; -webkit-box-shadow: 0 0 18px #33c681; }
+  50% { background-color: #3add91; -webkit-box-shadow: 0 0 18px #3add91; }
   to { background-color: #29A46A; -webkit-box-shadow: 0 0 9px #333; }
 }
 
