--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -9,7 +9,7 @@
                         <div class="col-md-7">
                             <ul class="social-networks-ul list-inline">
                                 <li><a href="/resume" title="Derek's Resume"><i class="far fa-file-alt"></i></a></li>
-                               	<li><a href="https://www.linkedin.com/in/derekhaw1/" title="Derek's Linkedin" target="_blank" class="linkedin-button"><i class="fab fa-linkedin-in"></i></a></li>
+                               	<li><a href="https://www.linkedin.com/in/derekhaw1/" title="Derek's Linkedin" target="_blank" class="linkedin-button"><i class="fab fa-linkedin-in" alt="Linkedin"></i></a></li>
                                 <li><a href="https://github.com/derek-haworth" title="Derek's Github" target="_blank" class="github-button"><i class="fab fa-github"></i></a></li>
                             </ul>
                         </div>
