--- a/views/all-projects.handlebars
+++ b/views/all-projects.handlebars
@@ -3,9 +3,9 @@
 	<div class="section-heading">
 		<div class="container">
 		    <div class="row">
-			    <div class="col-sm-6">
+			    <div class="col-sm-8">
 			        <h2>projects</h2>
-			        <p class="article-h2-content">Some things I'm proud of.</p>
+			        <p class="article-h2-content">A collection of professional and personal things I'm proud of.</p>
 			    </div>
 		    </div>
 		</div>
@@ -22,14 +22,5 @@
 		</div>
 	</div>
 
-	<!-- Design & Development Section -->
-	{{!-- <div class="section-heading">
-		<div class="container">
-		    <div class="row">
-		        <div class="col-sm-6">
-		            <h2>design &amp; development</h2>
-		            <p class="article-h2-content">Freelance design &amp; development projects and some personal ones</p>
-		        </div>
-		    </div>
-		</div>
-	</div> --}}
+
+
