--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,9 +2,11 @@
 	<div class="jumbotron bg-none">
 		<div class="container">
 		    <div class="row">
-				<h1 class="uppercase mbm">Finding a Developer<span class="block mtm">Just Got Easier</span></h1>
-				<p>// it's me. tehe</p>
-				<a href="/projects" class="main-cta inline-block text-center">Projects</a>
+				<div class="col-md-7">
+					<h1 class="uppercase mbm">Finding a Developer<span class="block mtm">Just Got Easier</span></h1>
+					<p>// it's me. tehe</p>
+					<a href="/projects" class="main-cta inline-block text-center">Projects</a>
+				</div>
 			</div>
 		</div>
 	</div>
