add detail to projects

--- a/app/public/assets/sass/_utilities.scss
+++ b/app/public/assets/sass/_utilities.scss
@@ -13,6 +13,7 @@
 .bg-none { background: none!important; }
 .buffer { padding: 4% 0;}
 .strike { text-decoration: line-through;}
+.text-none:hover, .text-none:active, .text-none:focus { text-decoration: none; }
 
 
 // MARGIN 
