--- a/views/all-projects.handlebars
+++ b/views/all-projects.handlebars
@@ -12,13 +12,13 @@
 	</div>
 
 	<!-- projects gallery -->
-	<div class="gallery container">
+	<div class="container mtxl">
 		<div class="row">
-		    <ul class="gallery-ul clearfix">
+		    <div class="gallery">
 		    	{{#each projects}}
 		    		{{> project-cards}}
 		    	{{/each}}
-		    </ul>
+		    </div>
 		</div>
 	</div>
 
