--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -1,10 +1,11 @@
-<div class="container">
+<div class="container content-area">
 	<div class="row">
 		<div class="col-md-12">
             <h2 class="inline-block">Resume</h2> 
             <a href="src/images/DerekHaworthResume_2018.docx.pdf" class="download-resume text-center right" id="resume" download>Download Hardcopy</a>
             <div id="resume">
-                Resume will go here.
+               // Digital, online version in progress. Please download a copy in PDF form in the meantime. <br/>
+               // Sorry for any inconvenience. Thank you!
             </div>
         </div>
     </div>
