--- a/app/public/assets/sass/_body.scss
+++ b/app/public/assets/sass/_body.scss
@@ -1,9 +1,3 @@
-/*
-    ====================================
-              Portfolio 
-    ====================================
-*/
-
 /* Jumbotron */
 .jumbotron {
   padding: 4em 0;
@@ -52,7 +46,7 @@
   }
   p {
     padding: 0 0 0 1em;
-    margin: 0;
+      margin: 0;
     color: #5e7184;
     font-size: 1.5em;
     font-style: italic;
@@ -61,26 +55,55 @@
 }
 
 
-/* projects */
-/* content */
-.content {
-  padding: 5em 0 0 0;
-}
+/*
+    ====================================
+              Portfolio 
+    ====================================
+*/
 
-.content h4 {
-  margin: 2em 0 0.75em 0;
-}
-
-.content img {
-  display: block;
-  margin: 50px auto;
-  text-align: center;
-  box-shadow: 1px 15px 30px #adb9c4;
-}
-
-.thumb img {
-  width: 105px;
-  height: 105px;
+.card {
+  border-radius: 3px;
+  background-color: $white;
+  box-shadow: 0 0 6px 0 rgba(30,45,62,.09);
+  transition: box-shadow .2s;
+  height: 100%;
+  min-height: 435px;
+  margin: 20px 0;
+  &:hover {
+    box-shadow: 0 10px 15px 0 rgba(30,45,62,.04), 0 0 50px 0 rgba(31,44,60,.05);
+    .card-img {
+      opacity: .9;
+    }
+  }
+  .card-img {
+    background-color: #a3afbf;;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+    height: 230px;
+    transition: opacity .2s;
+    opacity: .8;
+    border-radius: 3px 3px 0 0;
+    box-shadow: 0 10px 15px 0 rgba(30,45,62,0.04);
+  }
+  .card-content {
+    padding: 30px;
+    h4 {
+      color: #27303b;
+	    font-size: 26px;
+    }
+  }
+  .card-tags {
+    color: #526173;
+    font-size: 12px;
+    font-weight: $bolder;
+    display: flex;
+    line-height: 22px;
+  }
+  p {
+    color: #526173;
+    line-height: 1.5em;
+  }
 }
 
 
