--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -53,9 +53,9 @@
             <div class="spinner"><div class="spinner-inner"></div></div>
         </div>
     </div>
-    <div class="alert alert-warning temp-message" role="alert">
+    {{!-- <div class="alert alert-warning temp-message" role="alert">
         In Progress...
-    </div>
+    </div> --}}
     <header class="nav-down">
         <!-- nav -->
         <nav class="navbar navbar-fixed-top mb0">
