--- a/views/partials/project-cards.handlebars
+++ b/views/partials/project-cards.handlebars
@@ -1,14 +1,14 @@
 <div class="col-md-4">
 	<div class="card" id="{{this.id}}">
-		<a href="/projects/{{this.title}}" class="">
-			{{!-- <div class="card-img" style="background-image: url({{this.image}});" alt="{{this.title}}"></div> --}}
-			<div class="card-img" style="background-image: url('https://www.what-dog.net/Images/faces2/scroll0015.jpg');" alt="{{this.title}}"></div>
+		<a href="/projects/{{this.title}}" class="text-none">
+			<div class="card-img" style="background-image: url({{this.image}});" alt="{{this.title}}"></div>
+			{{!-- <div class="card-img" style="background-image: url('https://www.what-dog.net/Images/faces2/scroll0015.jpg');" alt="{{this.title}}"></div> --}}
 			<div class="card-content">
-				<div class="card-tags">
-					<div class="card-tag text-sm">{{this.data}}</div>
+				<div class="card-tags mbs">
+					<div class="card-tag">{{this.data}}</div>
 				</div>
-				<h4>{{this.title}}</h4>
-				<p>{{this.shortDesc}}</p>
+				<h4 class="">{{this.title}}</h4>
+				<p class="mb0">{{this.shortDesc}}</p>
 			</div>
 		</a>
 	</div>
