add desc on project page

--- a/views/single-project.handlebars
+++ b/views/single-project.handlebars
@@ -13,9 +13,9 @@
 						{{#if this.github}}
 							<a href="{{this.github}}"  target="_blank">See the code</a>
 						{{/if}}
-						
+
 						<p class="long-desc">
-							{{this.longDesc}}
+							{{this.content}}
 						</p>
 					</figcaption>
 				</figure>
