--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,1 +1,8 @@
-<h1>Not Found Page</h1>
+<div class="container content-area">
+	<div class="row">
+		<div class="col-md-12">
+			<h2>Not Found, Sorry.</h2>
+            <h3>Try going back to the projects page <a href="/projects">here</a></h3>
+		</div>
+	</div>
+</div>
