mobile styling about page

--- a/app/public/assets/sass/_body.scss
+++ b/app/public/assets/sass/_body.scss
@@ -1,3 +1,9 @@
+/*
+    ====================================
+            Landing / Index 
+    ====================================
+*/
+
 /* Jumbotron */
 .jumbotron {
   padding: 4em 0;
@@ -164,3 +170,9 @@
     ====================================
 */
 
+.prof-img {
+  @media (max-width: 767px) {
+    width: 65%;
+    margin: 20px auto;
+  }
+}
