--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="buffer"></div>
                 <div class="col-md-3">
-                    <img src="/src/images/about-me.png" alt="Derek Haworth Profile Image">
+                    <img src="/src/images/about-me.png" class="prof-img img-responsive" alt="Derek Haworth Profile Picture">
                 </div>
 			    <div class="col-md-7 col-md-offset-1 about-me">
                     <p>Hey there, I’m Derek in case you haven't figured that out yet. I’m a full stack developer in the Chicago area. These days I build front-end UIs and custom integration tools geared around customer service reps.</p>
