--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -4,8 +4,8 @@
             <h2 class="inline-block">Resume</h2> 
             <a href="src/images/DerekHaworthResume_2018.docx.pdf" class="download-resume text-center right" id="resume" download>Download Hardcopy</a>
             <div id="resume">
-               // Digital, online version in progress. Please download a copy in PDF form in the meantime. <br/>
-               // Sorry for any inconvenience. Thank you!
+               <p>// Digital, online version in progress. Please download a copy in PDF form in the meantime. </p>
+               <p>// Sorry for any inconvenience. Thank you!</p>
             </div>
         </div>
     </div>
