--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -18,6 +18,7 @@
                 </div>
 			    <div class="col-md-7 col-md-offset-1 about-me">
                     <p>Hey there, I’m Derek in case you haven't figured that out yet. I’m a full stack developer in the Chicago area. These days I build front-end UIs and custom integration tools geared around customer service reps.</p>
+                    <p>I am a highly determined individual who believes you get out of life what you put into it. Being trained by coding bootcamps I bring a dynamic perspective and talent to the industry. I learn quickly because I care so deeply about the process and technology. I am someone who is eager for new challenges and opportunities. I take a lot of pride in improving and building a company's values. I will give you strong commitment, focus, and sacrifice and as a life-long learner with a passion for programming, it's possible I could become your next senior lead.</p>
                     <p>In my spare time I like to experiment with React, build JavaScript games, and go for long walks on the beach.</p>
                     <div class="fun-facts">
                         <p>Fun Facts:</p>
