--- a/views/single-project.handlebars
+++ b/views/single-project.handlebars
@@ -15,7 +15,11 @@
 						{{/if}}
 
 						<p class="long-desc">
-							{{this.content}}
+							{{#if this.content}}
+
+							{{else}}
+							description coming soon
+							{{/if}}
 						</p>
 					</figcaption>
 				</figure>
