update mobile nav background

--- a/app/public/assets/sass/_layout.scss
+++ b/app/public/assets/sass/_layout.scss
@@ -44,8 +44,10 @@ header {
             height: 3px;
         }
     }
-    .navbar-collapse{
-        background: #fff;
+    .navbar-collapse {
+        @media (max-width: 767px) {
+            background: #fff;
+        }
         .nav {
             text-align: center;
             li {
