--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -4,7 +4,8 @@
                     <div class="row">
                         <div class="col-md-5 copyright">
                             <small>Made In Chicago</small>
-            				<p class="copyright">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Derek Haworth. All rights reserved.</p>
+                            <p class="copyright">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Derek Haworth. All rights reserved.</p>
+            				<p class="copyright">Site built with Handlebars, SASS, and deployed on Heroku</p>
                         </div>
                         <div class="col-md-7">
                             <ul class="social-networks-ul list-inline">
