--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -17,16 +17,16 @@
                     <img src="/src/images/about-me.png" class="prof-img img-responsive" alt="Derek Haworth Profile Picture">
                 </div>
 			    <div class="col-md-7 col-md-offset-1 about-me">
-                    <p>Hey there, I’m Derek in case you haven't figured that out yet. I’m a full stack developer in the Chicago area. These days I build front-end UIs and custom integration tools geared around customer service reps in Salesforce B2B Commerce.</p>
+                    <p>Hey there, I’m Derek in case you haven't figured that out yet. I’m a Salesforce developer in the Chicago area working in B2B Commerce (CloudCraze). I've spent most of my career in ecommerce and I'm pretty good at it. These days I build front-end UIs and custom integration tools geared around customer service reps in Salesforce.</p>
                     <p>I am a highly determined individual who believes you get out of life what you put into it. Being trained by coding bootcamps I bring a dynamic perspective and talent to the industry. I learn quickly because I care so deeply about the process and technology. I am someone who is eager for new challenges and opportunities. I take a lot of pride in improving and building a company's values. I will give you strong commitment, focus, and sacrifice and as a life-long learner with a passion for programming, it's possible I could become your next senior lead.</p>
-                    <p>In my spare time I like to experiment with React, build JavaScript games, and go for long walks on the beach.</p>
+                    <p>In my spare time I like to experiment with other technologies like React, build JavaScript games, and go for long walks on the beach.</p>
                     <div class="fun-facts">
                         <p>Fun Facts:</p>
                         <ul>
                             <li>Breaks the internet to learn how 'things' work</li>
                             <li>Loves problem solving.</li>
                             <li>Enjoys Git and Dad jokes</li>
-                            <li>Favorite Video Game: Bioshock Series</li>
+                            <li>Favorite Video Game: Bioshock Series &amp; Red Dead Redemption</li>
                             <li>Spirit Animal: Owl</li>
                             <li>Personality Type: <span><a href="https://www.16personalities.com/intj-personality" target="_blank" title="16 Personalities Website">INTJ-A</a></span></li>
                         </ul>
