change description path on project pages

--- a/views/single-project.handlebars
+++ b/views/single-project.handlebars
@@ -15,10 +15,10 @@
 						{{/if}}
 
 						<p class="long-desc">
-							{{#if this.content}}
+							{{#if this.longDesc}}
 
 							{{else}}
-							description coming soon
+								description coming soon
 							{{/if}}
 						</p>
 					</figcaption>
