change description path on project pages

--- a/views/single-project.handlebars
+++ b/views/single-project.handlebars
@@ -16,7 +16,7 @@
 
 						<p class="long-desc">
 							{{#if this.longDesc}}
-
+								{{this.longDesc}}
 							{{else}}
 								description coming soon
 							{{/if}}
