update route for project page

--- a/views/single-project.handlebars
+++ b/views/single-project.handlebars
@@ -15,7 +15,7 @@
 						{{/if}}
 
 						<p class="long-desc">
-							{{#if this.longDesc}}
+							{{#if this.content}}
 								{{this.longDesc}}
 							{{else}}
 								description coming soon
