update route for project page

--- a/views/single-project.handlebars
+++ b/views/single-project.handlebars
@@ -16,7 +16,7 @@
 
 						<p class="long-desc">
 							{{#if this.content}}
-								{{this.longDesc}}
+								{{this.content}}
 							{{else}}
 								description coming soon
 							{{/if}}
