update href to resume

--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-12">
             <h2 class="inline-block">Resume</h2> 
-            <a href="src/images/DerekHaworthResume_2018.docx.pdf" class="download-resume text-center right" id="resume" download>Download Hardcopy</a>
+            <a href="src/images/DerekHaworthResume_2018.pdf" class="download-resume text-center right" id="resume" download>Download Hardcopy</a>
             <div id="resume">
                <p>// Digital, online version in progress. Please download a copy in PDF form in the meantime. </p>
                <p>// Sorry for any inconvenience. Thank you!</p>
