--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -17,7 +17,7 @@
                     <img src="/src/images/about-me.png" class="prof-img img-responsive" alt="Derek Haworth Profile Picture">
                 </div>
 			    <div class="col-md-7 col-md-offset-1 about-me">
-                    <p>Hey there, I’m Derek in case you haven't figured that out yet. I’m a Salesforce developer in the Chicago area. I've spent most of my career in ecommerce and I'm pretty good at it. These days I build front-end UIs and custom integration tools geared around customer service reps in Salesforce.</p>
+                    <p>Hey there, I’m Derek in case you haven't figured that out yet. I’m a Senior Technical Consultant for B2B Commerce Cloud at Salesforce. I've spent most of my career in ecommerce and I'm pretty good at it.</p>
                     <p>I am a highly determined individual who believes you get out of life what you put into it. Being trained by coding bootcamps I bring a dynamic perspective and talent to the industry. I learn quickly because I care so deeply about the process and technology. I am someone who is eager for new challenges and opportunities. I take a lot of pride in improving and building a company's values. I will give you strong commitment, focus, and sacrifice and as a life-long learner with a passion for programming, it's possible I could become your next senior lead.</p>
                     <p>In my spare time I like to experiment with other technologies like React, build JavaScript games, and go for long walks on the beach.</p>
                     <div class="fun-facts">
